[gd_scene load_steps=2 format=3 uid="uid://38uepjwygm5o"]

[ext_resource type="Script" uid="uid://cx7u6fxyqxio7" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_06t4h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ModeMenu" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -20.0
offset_right = 56.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LocalButton" type="Button" parent="CanvasLayer/ModeMenu"]
layout_mode = 2
text = "Local"

[node name="OnlineButton" type="Button" parent="CanvasLayer/ModeMenu"]
layout_mode = 2
text = "Online"

[node name="ConnectionPanel" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -67.0
offset_right = 113.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel"]
layout_mode = 2
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Host:"

[node name="HostField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Port:"

[node name="PortField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "5500"

[node name="HostButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Host"

[node name="ConnectButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Connect"

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="CanvasLayer"]
offset_right = 8.0
offset_bottom = 8.0
text = "RESET"

[node name="SyncLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Regaining sync..."

[connection signal="pressed" from="CanvasLayer/ModeMenu/LocalButton" to="." method="_on_local_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ModeMenu/OnlineButton" to="." method="_on_online_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_reset_button_pressed"]
